refactoring fix bugs update readme
