# api/src/main/java/dev/thiagooliveira/deepstrike/application/dto/FleetDeployment.java
@@ -1,5 +1,6 @@
-package dev.thiagooliveira.deepstrike.domain;
+package dev.thiagooliveira.deepstrike.application.dto;
 
+import dev.thiagooliveira.deepstrike.domain.Coordinate;
 import java.util.List;
 
 public record FleetDeployment(List<ShipDeployment> ships) {
